samples/_failures_safe/1761637964_1e8024_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddb8c728.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_ddb8c728.c:166:9: error: expected expression at end of input
  166 |         advance_parser(
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ddb8c728.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddb8c728.c:166:9: error: expected declaration or statement at end of input
